--- a/static/pug/blocks/standart/header.pug
+++ b/static/pug/blocks/standart/header.pug
@@ -1,3 +1,29 @@
 mixin header
 	header.header
 		.wrapper
+			.header__top
+				nav.nav
+					ul.nav__list
+						li.nav__item
+							a(href="#").nav__link Компания
+						li.nav__item
+							a(href="#").nav__link Компания
+						li.nav__item
+							a(href="#").nav__link Компания
+						li.nav__item
+							a(href="#").nav__link Компания
+						li.nav__item
+							a(href="#").nav__link Компания
+						li.nav__item
+							a(href="#").nav__link Компания
+						li.nav__item
+							a(href="#").nav__link Компания
+							ul.nav__sublist
+								li.nav__subotem
+									a(href="#").nav__sublink Медиа кит
+								li.nav__subotem
+									a(href="#").nav__sublink Пресс-офис
+								li.nav__subotem
+									a(href="#").nav__sublink Условия использования
+								li.nav__subotem
+									a(href="#").nav__sublink Брошюра
