--- a/static/sass/fonts.sass
+++ b/static/sass/fonts.sass
@@ -1,6 +1,20 @@
-// @font-face
-// 	font-family: 'Roboto'
-// 	src: url('./fonts/Roboto-Medium.woff2') format('woff2'),
-// 	url('./fonts/Roboto-Medium.woff') format('woff')
-// 	font-weight: 500
-// 	font-style: normal
+@font-face
+	font-family: 'Gotham Pro'
+	src: url('./fonts/GothamPro.woff2') format('woff2'),
+	url('./fonts/GothamPro.woff') format('woff')
+	font-weight: normal
+	font-style: normal
+
+@font-face
+	font-family: 'Gotham Pro'
+	src: url('./fonts/GothamPro-Bold.woff2') format('woff2'),
+	url('./fonts/GothamPro-Bold.woff') format('woff')
+	font-weight: bold
+	font-style: normal
+
+@font-face
+	font-family: 'Gotham Pro'
+	src: url('./fonts/GothamPro-Medium.woff2') format('woff2'),
+	url('./fonts/GothamPro-Medium.woff') format('woff')
+	font-weight: 500
+	font-style: normal
