--- a/static/pug/blocks/standart/footer.pug
+++ b/static/pug/blocks/standart/footer.pug
@@ -1,3 +1,131 @@
 mixin footer
 	footer.footer
 		.wrapper
+			.footer__left
+				p.footer__copyrights © АО «Технологическая корпорация ЛЕКС», 2019
+				.social
+					ul.social__list
+						li.social__item
+							a(href="#").social__link.social__link--fb Facebook
+						li.social__item
+							a(href="#").social__link.social__link--yu Youtube
+						li.social__item
+							a(href="#").social__link.social__link--ln Linkedin
+						li.social__item
+							a(href="#").social__link.social__link--in Instagramm
+
+				p.footer__adress 620137, Свердловская область, город Екатеринбург, улица Сулимова 50, офис 5.14
+
+				.footer__phones
+					a(href="tel:83432270205").footer__phones-link +7 (343) 227-02-05
+					a(href="tel:73432270206").footer__phones-link +7 (343) 227-02-06
+
+				.footer__emails
+					a(href="mailto:info@lexxtechnology.com").footer__emails-link info@lexxtechnology.com
+
+				.developers
+					a(href="https://dextra.ru" target="_blank").developers__href
+						span.developers__dextra DEXTRA
+						| Разработка
+						br
+						|сайта
+
+			nav.footer__nav
+				ul.footer__nav-list
+					li.footer__nav-item
+						a(href="#").footer__nav-link Компания
+
+						ul.footer__nav-sublist
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink О компании
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Новости
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Сертификаты и лицензии
+
+					li.footer__nav-item
+						a(href="#").footer__nav-link Продукция
+
+						ul.footer__nav-sublist
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Системы энергосбережения и стабилизации электрического тока
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Системы оперативного постоянного тока
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Системы гарантированного электроснабжения удаленных объектов
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Системы и решения в области АСУТП
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Центры обработки данных
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Редокс-поточные накопители энергии
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Системы электроснабжения на топливных элементах CH4
+
+					li.footer__nav-item
+						a(href="#").footer__nav-link Инвесторам
+
+						ul.footer__nav-sublist
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Устав и документы АО «ЛЕКС Технолоджи»
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Корпоративное управление
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Собрания акционеров
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Акции
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Облигации
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Дивиденды
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Отношения с кредиторами
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Раскрытие информации
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Структура компании
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Годовые отчеты
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Финансовый календарь
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Презентации
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Часто задаваемые впросы акционеров
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Аналитики
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Контактная информация для инвесторов
+
+					li.footer__nav-item
+						a(href="#").footer__nav-link Решения
+
+					li.footer__nav-item
+						a(href="#").footer__nav-link Реализованные проекты
+
+					li.footer__nav-item
+						a(href="#").footer__nav-link Покупателям
+
+						ul.footer__nav-sublist
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Вакансии
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Партнеры и клиенты
+
+					li.footer__nav-item
+						a(href="#").footer__nav-link Медиа
+
+						ul.footer__nav-sublist
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Медиа кит
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Пресс-офис
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Условия использования
+							li.footer__nav-subitem
+								a(href="#").footer__nav-sublink Брошюра
+
+					li.footer__nav-item
+						a(href="#").footer__nav-link Login
+					li.footer__nav-item
+						a(href="#").footer__nav-link Контакты
