--- a/static/pug/blocks/standart/header.pug
+++ b/static/pug/blocks/standart/header.pug
@@ -27,3 +27,21 @@ mixin header
 									a(href="#").nav__sublink Условия использования
 								li.nav__subotem
 									a(href="#").nav__sublink Брошюра
+				.header__btns
+					button(type="button").header__btn.header__btn--search
+					button(type="button").header__btn.header__btn--message
+			.header__bottom
+				.logo
+					a(href="#").logo__link
+						img(src="", alt="")
+				.header__info
+					.header__language
+						select.header__language-select
+							option Русский
+							option Английский
+							option Испанский
+							option Португальский
+							option Арабский
+							option Немецкий
+							option Индийский
+					a(href="tel:83432270205").header__tel +7 (343) 227-02-05
