--- a/static/pug/index.pug
+++ b/static/pug/index.pug
@@ -9,19 +9,19 @@ html(lang="ru")
 				b 1. 
 				a(href="./index-page.html", target="blank").content__link Главная
 
-	//- style.
-	//- 	.content {
-	//- 		display: flex;
-	//- 		justify-content: center;
-	//- 		padding: 200px 0;
-	//- 	}
+	style.
+		.content {
+			display: flex;
+			justify-content: center;
+			padding: 200px 0;
+		}
 
-	//- 	.content__item {
-	//- 		margin-bottom: 20px
-	//- 	}
+		.content__item {
+			margin-bottom: 20px
+		}
 
-	//- 	.content__link {
-	//- 		color: black;
-	//- 		text-decoration: underline;
-	//- 		font-size: 20px;
-	//- 	}
+		.content__link {
+			color: black;
+			text-decoration: underline;
+			font-size: 20px;
+		}
