--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -13,7 +13,7 @@ html
 	width: 100%
 
 body
-	font-family: ''
+	font-family: 'Gotham Pro'
 	font-style: normal
 	font-weight: normal
 	position: relative
@@ -53,3 +53,7 @@ textarea
 	overflow: hidden
 	// position: fixed
 	padding-right: 17px
+
+.wrapper
+	max-width: 1440px
+	margin: 0 auto
