--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -6,3 +6,9 @@
 @import ext/formatter
 
 @import main
+
+@import blocks/standart/footer
+@import blocks/standart/developers
+@import blocks/standart/social
+
+@import blocks/index/inews
