--- a/static/pug/blocks/blocks.pug
+++ b/static/pug/blocks/blocks.pug
@@ -1,6 +1,9 @@
 include standart/head
 include standart/header
 include standart/footer
+include standart/scripts
 
 include index/hero
 include index/inews
+include index/iabout
+include index/icatalog
