--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -4,11 +4,18 @@
 @import variables
 
 @import ext/formatter
+@import ext/choices
+@import ext/swiper
 
 @import main
 
+@import blocks/standart/header
+@import blocks/standart/nav
 @import blocks/standart/footer
 @import blocks/standart/developers
 @import blocks/standart/social
 
 @import blocks/index/inews
+@import blocks/index/hero
+@import blocks/index/iabout
+@import blocks/index/icatalog
