--- a/static/sass/blocks/index/inews.sass
+++ b/static/sass/blocks/index/inews.sass
@@ -1,4 +1,5 @@
 .inews
+	padding-top: 92px
 	margin-bottom: 95px
 
 	&__header
@@ -21,7 +22,7 @@
 		font-size: 18px
 		line-height: 24px
 		color: $main-blue
-		font-weight: 600
+		font-weight: 500
 		border-bottom: 1px solid $border-bottom
 		transition: .5s border-color
 
@@ -70,7 +71,7 @@
 		span
 			font-size: 22px
 			line-height: 26px
-			font-weight: 600
+			font-weight: 500
 			color: $main-blue
 			border-bottom: 1px solid $border-bottom
 			transition: .5s border-color
