--- a/static/sass/blocks/standart/footer.sass
+++ b/static/sass/blocks/standart/footer.sass
@@ -31,7 +31,7 @@
 	&__phones-link
 		font-size: 16px
 		line-height: 20px
-		font-weight: 600
+		font-weight: 500
 		color: $black
 		display: inline-block
 		margin-bottom: 2px
@@ -55,11 +55,12 @@
 	&__nav-item
 		margin-right: 36px
 		margin-bottom: 31px
+		break-inside: avoid-column
 
 	&__nav-link
 		font-size: 16px
 		line-height: 21px
-		font-weight: 600
+		font-weight: 500
 		color: $black
 		display: inline-block
 		transition: .5s color
