--- a/static/pug/blocks/index/inews.pug
+++ b/static/pug/blocks/index/inews.pug
@@ -4,28 +4,28 @@ mixin inews
 			.inews__header
 				h2.inews__title Новости
 				a(href="#").inews__header-link Больше новостей
-			.inews__items
-				.inews__item
-					.inews__over-img
-						a(href="#").inews__over-link
-						img(src="./img/news/img-1.jpg", alt="").inews__over-pic
-					data.inews__data 12/07/2019
-					a(href="#").inews__link
+			.cards
+				.cards__item
+					.cards__over-img
+						a(href="#").cards__over-link
+						img(src="./img/news/img-1.jpg", alt="").cards__over-pic
+					data.cards__data 12/07/2019
+					a(href="#").cards__link
 						span Систем электропитания на базе топливных элементов
-					p.inews__text LEXX Technology – инжиниринговая корпорация стоящая во главе электротехнического холдинга. Непосредственно и через наши дочерние компании мы занимаемся производственным бизнесом и продажей электрооборудования.
-				.inews__item
-					.inews__over-img
-						a(href="#").inews__over-link
-						img(src="./img/news/img-2.jpg", alt="").inews__over-pic
-					data.inews__data 12/07/2019
-					a(href="#").inews__link
+					p.cards__text LEXX Technology – инжиниринговая корпорация стоящая во главе электротехнического холдинга. Непосредственно и через наши дочерние компании мы занимаемся производственным бизнесом и продажей электрооборудования.
+				.cards__item
+					.cards__over-img
+						a(href="#").cards__over-link
+						img(src="./img/news/img-2.jpg", alt="").cards__over-pic
+					data.cards__data 12/07/2019
+					a(href="#").cards__link
 						span Систем накопления и хранения энергии
-					p.inews__text Системы автоматизации технологического оборудования и процессов, системы накопления и хранения энергии, систем электропитания на базе топливных элементов.
-				.inews__item
-					.inews__over-img
-						a(href="#").inews__over-link
-						img(src="./img/news/img-3.jpg", alt="").inews__over-pic
-					data.inews__data 12/07/2019
-					a(href="#").inews__link
+					p.cards__text Системы автоматизации технологического оборудования и процессов, системы накопления и хранения энергии, систем электропитания на базе топливных элементов.
+				.cards__item
+					.cards__over-img
+						a(href="#").cards__over-link
+						img(src="./img/news/img-3.jpg", alt="").cards__over-pic
+					data.cards__data 12/07/2019
+					a(href="#").cards__link
 						span Системы гарантированного электроснабжения
-					p.inews__text Системы экономии электроэнергии, системы стабилизации, системы оперативного постоянного тока, системы гарантированного электроснабжения удалённых объектов и источников бесперебойного питания.
+					p.cards__text Системы экономии электроэнергии, системы стабилизации, системы оперативного постоянного тока, системы гарантированного электроснабжения удалённых объектов и источников бесперебойного питания.
