--- a/static/pug/blocks/standart/header.pug
+++ b/static/pug/blocks/standart/header.pug
@@ -84,7 +84,7 @@ mixin header
 		.header__bottom
 			.logo
 				a(href="#").logo__link
-					img(src="./img/logo-white.png", alt="")
+					img(src="./img/logo-white.png", alt="").logo__img
 			.header__info
 				.header__language
 					span Язык/Language:
