--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -69,5 +69,11 @@ textarea
 		font-size: 0
 		line-height: 0
 
+	&__img
+		width: 175px
+		height: 92px
+		object-fit: cover
+		font-family: 'object-fit: cover;'
+
 .blue
 	background-color: $main-blue
