--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -14,6 +14,7 @@
 @import blocks/standart/footer
 @import blocks/standart/developers
 @import blocks/standart/social
+@import blocks/standart/cards
 
 @import blocks/index/inews
 @import blocks/index/hero
