--- a/static/pug/blocks/index/icatalog.pug
+++ b/static/pug/blocks/index/icatalog.pug
@@ -11,6 +11,7 @@ mixin icatalog
 								img(src="./img/hero-slider-img1.jpg", alt="")
 							.swiper-slide.icatalog__imgs-item
 								img(src="./img/icatalog-img.jpg", alt="")
+							.swiper-slide.icatalog__imgs-item
 				
 				.icatalog__slider
 					.swiper-container.js-icatalog-slider
@@ -32,6 +33,8 @@ mixin icatalog
 								.icatalog__slider-name
 									span Что-то новое
 								img(src="./img/icatalog-icon2.png", alt="").icatalog__slider-icon
+							
+							.swiper-slide.icatalog__slide.icatalog__slide--empty
 						
 					.swiper-buttons
 						.swiper-button-prev
