--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -16,6 +16,7 @@
 @import blocks/standart/social
 @import blocks/standart/cards
 
+@import blocks/index/index
 @import blocks/index/inews
 @import blocks/index/hero
 @import blocks/index/iabout
