--- a/static/pug/blocks/index/hero.pug
+++ b/static/pug/blocks/index/hero.pug
@@ -15,7 +15,15 @@ mixin hero
 
 		.wrapper
 			.hero__catalog-items
-				a(href="#").hero__catalog-item
-					span Системы энергосбережения и стабилизации электрического тока
-				a(href="#").hero__catalog-item
-					span Системы оперативного постоянного тока 
+				.swiper-container.js-heroCatalog-slider
+					.swiper-wrapper
+						.swiper-slide.hero__catalog-item
+							a(href="#").hero__catalog-link
+							span.hero__catalog-name Системы энергосбережения и стабилизации электрического тока
+						.swiper-slide.hero__catalog-item
+							a(href="#").hero__catalog-link
+							span.hero__catalog-name Системы оперативного постоянного тока 
+						.swiper-slide.hero__catalog-item
+							a(href="#").hero__catalog-link
+							span.hero__catalog-name Что-то новое
+						.swiper-slide.hero__catalog-item.hero__catalog-item--empty
