--- a/static/sass/blocks/index/hero.sass
+++ b/static/sass/blocks/index/hero.sass
@@ -11,6 +11,8 @@
 		display: flex
 		flex-direction: column
 		justify-content: center
+		background-size: cover
+		background-repeat: no-repeat
 
 	&__title
 		font-size: 72px
